--- a/coe-client/public/index.html
+++ b/coe-client/public/index.html
@@ -38,7 +38,8 @@
     crossorigin="anonymous">
     <title>CoE App</title>
   </head>
-  <body>
+  <body style="background: rgb(244,244,246);
+  background: linear-gradient(90deg, rgba(244,244,246,1) 0%, rgba(216,236,235,1) 21%, rgba(168,223,235,1) 100%);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
